# Macrothing

./: CMakeLists.txt  README.md  kod.txt
include/: Abort.h  App.h  Instruction.h  SendInputInstruction.h  WaitableInstruction.h
include/helper/: KeyCodes.h
include/instructions/: InstructionsTypedef.h  KeyboardPress.h  KeyboardRelease.h  Loop.h  MouseMove.h  MousePress.h  MouseRelease.h  Wait.h
include/interpreter/: Interpreter.h
src/: Abort.cpp  App.cpp  SendInputInstruction.cpp  WaitableInstruction.cpp  main.cpp
src/helper/: KeyCodes.cpp
src/instructions/: KeyboardPress.cpp  KeyboardRelease.cpp  Loop.cpp  MouseMove.cpp  MousePress.cpp  MouseRelease.cpp  Wait.cpp
src/interpreter/: Interpreter.cpp
